# NovaClient

./: CMakeLists.txt  README.md
include/NovaClient/: Client.hpp  ClientState.hpp
include/NovaClient/Net/: Packet.hpp  PacketBuffer.hpp  PacketRegistry.hpp  Protocol.hpp  Socket.hpp
include/NovaClient/Net/Packets/: Handshake.hpp  LoginStart.hpp
src/: Client.cpp  ClientState  main.cpp
src/Net/: PacketBuffer.cpp  PacketRegistry.cpp
src/Net/Packets/: Handshake.cpp  LoginStart.cpp
